fixed ui on mobile

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     background-size: 100% 100%;
     background-position: center;
     background-attachment: fixed;
+    position: relative;
 }
 
 #logo {
@@ -35,7 +36,6 @@ body {
     align-items: center;
     flex-direction: row;
     position: absolute;
-    top: 0;
     height: 12%;
     max-height: 100%;
     width: 100%;
@@ -49,7 +49,7 @@ body {
 }
 
 .player-two {
-    top: 87.8%;
+    bottom: 0;
     right: 0;
 }
 
@@ -120,13 +120,6 @@ body {
     margin-top: 0rem;
     border: 4px solid silver;
     border-radius: 3px;
-}
-
-h1 {
-    color: rgb(185, 99, 0);
-    font-size: 3rem;
-    position: relative;
-    
 }
 
 .duel-moves {
@@ -303,7 +296,6 @@ h1 {
         align-items: center;
         flex-direction: row;
         position: absolute;
-        top: 0;
         height: 15%;
         max-height: 100%;
         width: 100%;
@@ -315,7 +307,7 @@ h1 {
     }
     
     .player-two {
-        top: 85%;
+        bottom: 0;
     }
     .display-panel-image {
         height: 100%;
@@ -395,7 +387,8 @@ h1 {
     
     #result1 {
         color: rgb(0, 228, 197);
-        font-size: 3rem;
+        text-align: center;
+        font-size: 2.8rem;
     }
     
     #result2 {
@@ -413,9 +406,9 @@ h1 {
         margin-top: 5rem;
     }
     .btn {
-        height: 10rem;
+        max-height: 10rem;
         width: 3rem;
-        padding: 5rem 3.5rem;
+        padding: 0rem 3rem;
         border-radius: 10px;
         border: 5px solid black;
         box-shadow: 0.5px 0.5px 10px rgb(101, 149, 253);
@@ -425,16 +418,18 @@ h1 {
         transition: all 0.2s ease;
     }
     .button-wrapper {
-        margin-top: 1rem;
-        margin-left: 2.5rem;
+        margin-top: 0rem;
+        margin-left: 0rem;
+        text-align: center;
     }
     
     .button-title {
         color: rgb(101, 149, 253);
         text-shadow: .2rem .2rem rgba(255, 217, 0, 0.856);
-        font-size: 3.2rem;
+        font-size: 3rem;
         margin-top: 0rem;
-        margin-right: 3rem;
+        margin-right: 0rem;
+        margin-bottom: 3rem;
         text-align: center;
     }
    
